added zip libraries

--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,10 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# PlatformIO specific
+.pioenvs
+.piolibdeps
+.clang_complete
+.gcc-flags.json
+.pio
