--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,10 +12,11 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/home/joshuatablan/Documents/PlatformIO/Projects/IMU-Sensor/.pio/build/seeed_xiao_esp32c3/firmware.elf",
-            "projectEnvName": "seeed_xiao_esp32c3",
-            "toolchainBinDir": "/home/joshuatablan/.platformio/packages/toolchain-riscv32-esp/bin",
+            "executable": "C:/Users/Joshua/Desktop/gitrepos/IMU-Sensor/.pio/build/xiaoblesense_arduinocore_mbed/firmware.elf",
+            "projectEnvName": "xiaoblesense_arduinocore_mbed",
+            "toolchainBinDir": "C:/Users/Joshua/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
+            "svdPath": "C:/Users/Joshua/.platformio/platforms/nordicnrf52/misc/svd/nrf52840.svd",
             "preLaunchTask": {
                 "type": "PlatformIO",
                 "task": "Pre-Debug"
@@ -25,19 +26,21 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/home/joshuatablan/Documents/PlatformIO/Projects/IMU-Sensor/.pio/build/seeed_xiao_esp32c3/firmware.elf",
-            "projectEnvName": "seeed_xiao_esp32c3",
-            "toolchainBinDir": "/home/joshuatablan/.platformio/packages/toolchain-riscv32-esp/bin",
-            "internalConsoleOptions": "openOnSessionStart"
+            "executable": "C:/Users/Joshua/Desktop/gitrepos/IMU-Sensor/.pio/build/xiaoblesense_arduinocore_mbed/firmware.elf",
+            "projectEnvName": "xiaoblesense_arduinocore_mbed",
+            "toolchainBinDir": "C:/Users/Joshua/.platformio/packages/toolchain-gccarmnoneeabi/bin",
+            "internalConsoleOptions": "openOnSessionStart",
+            "svdPath": "C:/Users/Joshua/.platformio/platforms/nordicnrf52/misc/svd/nrf52840.svd"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "/home/joshuatablan/Documents/PlatformIO/Projects/IMU-Sensor/.pio/build/seeed_xiao_esp32c3/firmware.elf",
-            "projectEnvName": "seeed_xiao_esp32c3",
-            "toolchainBinDir": "/home/joshuatablan/.platformio/packages/toolchain-riscv32-esp/bin",
+            "executable": "C:/Users/Joshua/Desktop/gitrepos/IMU-Sensor/.pio/build/xiaoblesense_arduinocore_mbed/firmware.elf",
+            "projectEnvName": "xiaoblesense_arduinocore_mbed",
+            "toolchainBinDir": "C:/Users/Joshua/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
+            "svdPath": "C:/Users/Joshua/.platformio/platforms/nordicnrf52/misc/svd/nrf52840.svd",
             "loadMode": "manual"
         }
     ]
