--- a/platformio.ini
+++ b/platformio.ini
@@ -11,9 +11,19 @@
 [env]
 platform = https://github.com/maxgerhardt/platform-nordicnrf52
 framework = arduino
- 
+monitor_speed = 9600  # Baud rate should match Serial.begin(9600)
+lib_deps = 
+	arduino-libraries/ArduinoBLE@^1.3.7
+	seeed-studio/Seeed Arduino LSM6DS3@^2.0.4
+
 [env:xiaoblesense_arduinocore_mbed]
 board = xiaoblesense
- 
+lib_deps = 
+	arduino-libraries/ArduinoBLE@^1.3.7
+	seeed-studio/Seeed Arduino LSM6DS3@^2.0.4
+
 [env:xiaoble_arduinocore_mbed]
 board = xiaoble
+lib_deps = 
+	arduino-libraries/ArduinoBLE@^1.3.7
+	seeed-studio/Seeed Arduino LSM6DS3@^2.0.4
