--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [env]
 platform = https://github.com/maxgerhardt/platform-nordicnrf52
 framework = arduino
-monitor_speed = 9600  # Baud rate should match Serial.begin(9600)
+monitor_speed = 9600
 lib_deps = 
 	arduino-libraries/ArduinoBLE@^1.3.7
 	seeed-studio/Seeed Arduino LSM6DS3@^2.0.4
@@ -25,5 +25,5 @@ lib_deps =
 [env:xiaoble_arduinocore_mbed]
 board = xiaoble
 lib_deps = 
-	arduino-libraries/ArduinoBLE@^1.3.7
 	seeed-studio/Seeed Arduino LSM6DS3@^2.0.4
+	arduino-libraries/ArduinoBLE@^1.3.7
