--- a/platformio.ini
+++ b/platformio.ini
@@ -8,22 +8,24 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env]
+[env:xiaoblesense]
 platform = https://github.com/maxgerhardt/platform-nordicnrf52
 framework = arduino
-monitor_speed = 9600
-lib_deps = 
-	arduino-libraries/ArduinoBLE@^1.3.7
-	seeed-studio/Seeed Arduino LSM6DS3@^2.0.4
-
-[env:xiaoblesense_arduinocore_mbed]
 board = xiaoblesense
-lib_deps = 
-	arduino-libraries/ArduinoBLE@^1.3.7
-	seeed-studio/Seeed Arduino LSM6DS3@^2.0.4
 
-[env:xiaoble_arduinocore_mbed]
-board = xiaoble
+; Ensure we use the Nordic SDK-based core (not Mbed)
+board_build.core = arduino
+
+; Include necessary libraries
 lib_deps = 
-	seeed-studio/Seeed Arduino LSM6DS3@^2.0.4
-	arduino-libraries/ArduinoBLE@^1.3.7
+    arduino-libraries/ArduinoBLE@^1.3.7
+    seeed-studio/Seeed Arduino LSM6DS3@^2.0.4
+
+; Enable serial monitor at 9600 baud
+monitor_speed = 9600
+
+; Disable compiler optimizations for debugging (optional)
+build_flags = -O0
+
+; Ensure correct upload method
+upload_protocol = nrfutil
