--- a/platformio.ini
+++ b/platformio.ini
@@ -9,12 +9,12 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:xiaoblesense]
-platform = https://github.com/maxgerhardt/platform-nordicnrf52
+platform = https://github.com/Seeed-Studio/platform-seeedboards.git
+board = seeed-xiao-afruitnrf52-nrf52840
 framework = arduino
-board = xiaoblesense
 
 ; Ensure we use the Nordic SDK-based core (not Mbed)
-board_build.core = arduino
+; board_build.core = arduino
 
 ; Include necessary libraries
 lib_deps = 
