--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,9 @@ board = xiaoblesense
 board_build.core = arduino
 
 ; Include necessary libraries
+lib_deps = 
+    arduino-libraries/ArduinoBLE@^1.3.7
+    seeed-studio/Seeed Arduino LSM6DS3@^2.0.4
 
 ; Enable serial monitor at 9600 baud
 monitor_speed = 9600
