--- a/platformio.ini
+++ b/platformio.ini
@@ -8,24 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:xiaoblesense]
-platform = https://github.com/maxgerhardt/platform-nordicnrf52
+[env:seeed_xiao_nrf52840]
+platform = https://github.com/Seeed-Studio/platform-seeedboards.git
+board = seeed-xiao-afruitnrf52-nrf52840-sense
 framework = arduino
-board = xiaoblesense
-
-; Ensure we use the Nordic SDK-based core (not Mbed)
-board_build.core = arduino
-
-; Include necessary libraries
 lib_deps = 
-    arduino-libraries/ArduinoBLE@^1.3.7
-    seeed-studio/Seeed Arduino LSM6DS3@^2.0.4
-
-; Enable serial monitor at 9600 baud
-monitor_speed = 9600
-
-; Disable compiler optimizations for debugging (optional)
-build_flags = -O0
-
-; Ensure correct upload method
-upload_protocol = nrfutil
+	arduino-libraries/ArduinoBLE@^1.5.0
+	seeed-studio/Seeed Arduino LSM6DS3@^2.0.5
+    adafruit/Adafruit nRF52 Arduino @ ^1.0.0 
